<resources>
    <string name="current_mode_cycling">Cycling</string>
    <string name="current_mode_running">Running</string>
    <string name="current_mode_swimming">Swimming</string>

    <string name="app_name">Hipersch</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_register">No account yet? Create  one</string>
    <string name="login_button">Login</string>

    <string name="menu_schedule">Schedule</string>
    <string name="menu_tasks">Tests</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_statistics">Statistics</string>

    <string name="signup_button">Sign up</string>
    <string name="signup_height">Height in cm</string>
    <string name="signup_weight">Weight in kg</string>
    <string name="signup_email">Email</string>
    <string name="singup_password">password</string>
    <string name="signup_password_confirm">Confirm your password</string>
    <string name="signup_name">Name</string>
    <string name="signup_lastname">Lastname</string>
    <string name="singup_gender">Gender</string>
    <string name="signup_gender_male">Male</string>
    <string name="signup_gender_female">Female</string>
    <string name="signup_password">Password</string>
    <string name="signup_next">Next</string>
    <string name="signup_finish">Finish</string>
    <string name="signup_role_athlete">Athlete</string>
    <string name="signup_role_trainer">Trainer</string>
    <string name="signup_role">Role:</string>

    <string-array name="cycling_test_types">
        <item>Six seconds</item>
        <item>One minute</item>
        <item>Six minutes</item>
        <item>Twenty minutes</item>
    </string-array>

    <string-array name="swimming_categories">
        <item>Adult Female Long Distance</item>
        <item>Adult Female Sprinter</item>
        <item>Adult Male Long Distance</item>
        <item>Adult Male Sprinter</item>
        <item>Junior Female Long Distance</item>
        <item>Junior Female Sprinter</item>
        <item>Junior Male Long Distance</item>
        <item>Junior Male Sprinter</item>
        <item>Infantile Female</item>
        <item>Infantile Male</item>
        <item>Beginner Female</item>
        <item>Beginner Male</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
